# fullyautobob8.2

./: README.md  copilot-instructions.md  counterfactual.py  event_store.py  generator.py  policy.py  regime.py  requirements.txt  router.py  simlab.py  synthetic.py
v26meme_institutional_extracted/: .env.example  README.md  copilot-instructions.md  pyproject.toml
v26meme_institutional_extracted/configs/: config.yaml
v26meme_institutional_extracted/dashboard/: app.py
v26meme_institutional_extracted/v26meme/: cli.py
v26meme_institutional_extracted/v26meme/allocation/: allocator.py
v26meme_institutional_extracted/v26meme/core/: dsl.py  utils.py
v26meme_institutional_extracted/v26meme/data/: ccxt_conn.py
v26meme_institutional_extracted/v26meme/execution/: fsm.py
v26meme_institutional_extracted/v26meme/labs/: fieldlab.py  worldlab.py
v26meme_institutional_extracted/v26meme/research/: triage.py
